domain/src/main/java/com/example/domain/error/ErrorEntity.kt
package com.example.domain.error

interface ErrorEntity{
    val code: Int
}